- added POST /order endpoint - books chosen seats for certain movie session; - updating all mappers; - removing unique constraint on order_id in ticket table; - updating documentation.
